<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView

        android:layout_marginTop="10dp"
        android:src="@drawable/logotext1"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight="2"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                    <TextView
                        android:onClick="lovequotes"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:paddingRight="25dp"
                        android:textSize="20sp"
                        android:background="@drawable/dashboardbuttonbg"
                        android:text="@string/dash_button_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:paddingRight="25dp"
                        android:textSize="20sp"
                        android:background="@drawable/dashboardbuttonbg"
                        android:text="@string/dash_button_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:paddingRight="25dp"
                        android:textSize="20sp"
                        android:background="@drawable/dashboardbuttonbg"
                        android:text="@string/dash_button_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:paddingRight="25dp"
                        android:textSize="20sp"
                        android:background="@drawable/dashboardbuttonbg"
                        android:text="@string/dash_button_04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:paddingRight="25dp"
                        android:textSize="20sp"
                        android:background="@drawable/dashboardbuttonbg"
                        android:text="@string/dash_button_05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:paddingRight="25dp"
                        android:textSize="20sp"
                        android:background="@drawable/dashboardbuttonbg"
                        android:text="@string/dash_button_06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="25dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:paddingRight="25dp"
                        android:textSize="20sp"
                        android:background="@drawable/dashboardbuttonbg"
                        android:text="@string/dash_button_07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>